#554 Set correct owner values, retrieve them from STF API
