# lib/units/api/controllers/devices.js
@@ -282,6 +282,26 @@ function getDeviceGroups(req, res) {
   })
 }
 
+function getDeviceOwner (req, res) {
+  var serial = req.swagger.params.serial.value
+  dbapi.getDeviceGroupOwner(serial)
+  .then(response => {
+    if (!response) {
+      return res.status(404).json({
+        success: false, 
+        description: 'Device not found'
+      })
+    }
+    return res.status(200).json(response)
+  })
+  .catch(function(err) {
+    log.info('Failed to get device owner: ', err.stack)
+    res.status(500).json({
+      success: false
+    })
+  })
+}
+
 function getDeviceBookings(req, res) {
   const serial = req.swagger.params.serial.value
   const fields = req.swagger.params.fields.value
@@ -576,6 +596,7 @@ module.exports = {
 , putDeviceBySerial: putDeviceBySerial
 , getDeviceBySerial: getDeviceBySerial
 , getDeviceSize: getDeviceSize
+, getDeviceOwner: getDeviceOwner
 , getDeviceGroups: getDeviceGroups
 , getDeviceBookings: getDeviceBookings
 , addOriginGroupDevice: addOriginGroupDevice
