# lib/units/api/swagger/api_v1.yaml
@@ -2031,6 +2031,32 @@ paths:
             $ref: "#/definitions/UnexpectedErrorResponse"
       security:
         - accessTokenAuth: []
+  /devices/{serial}/owner:
+    x-swagger-router-controller: devices
+    get:
+      summary: Gets the group owner of a device
+      description: Gets the group owner of a device
+      operationId: getDeviceOwner
+      tags:
+        - user
+      parameters:
+        - name: serial
+          in: path
+          description: Device identifier (serial)
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Device size information
+          schema:
+            $ref: "#/definitions/OwnerResponse"
+        default:
+          description: >
+            Unexpected Error:
+              * 404: Not Found => unknown device
+              * 500: Internal Server Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /devices/{serial}/groups:
     x-swagger-router-controller: devices
     get:
@@ -2366,6 +2392,15 @@ definitions:
         type: integer
       width:
         type: integer
+  OwnerResponse:
+    required:
+      - email
+      - name
+    properties:
+      email: 
+        type: string
+      name:
+        type: string
   DeviceResponse:
     required:
       - success
